--- a/css/styles.css
+++ b/css/styles.css
@@ -28,12 +28,35 @@ body {
 }
 
 .list {
+    padding: 0;
+    margin: 0;
     list-style: none;
 }
 
+h1,
+h2,
+h3,
+p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 /* Site nav */
+.main-nav {
+    display: flex;
+    align-items: center;
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+}
 
 .logo {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
@@ -42,7 +65,7 @@ body {
 }
 
 .logo-first {
-    color: var(--accent-color);   
+    color: var(--accent-color);
 }
 
 .logo-second {
@@ -53,14 +76,29 @@ body {
     color: var(--button-text-color);
 }
 
+.site-nav {
+    display: flex;
+    margin-left: 93px;
+}
+
+.site-nav .item + .item {
+    margin-left: 50px;
+}
+
 .site-nav .link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
     color: var(--primary-text-color);
+
     font-weight: 500;
     font-size: 14px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     text-decoration: none;
 }
+
 .site-nav .link:hover,
 .site-nav .link:focus {
     color: var(--accent-color);
@@ -70,8 +108,22 @@ body {
     color: var(--accent-color);
 }
 
+.auth-nav {
+        display: flex;
+        margin-left: auto;
+    }
+
+.auth-nav .item + .item {
+    margin-left: 50px;
+}
+
 .auth-nav .link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
     color: var(--secondary-text-color);
+
     font-weight: 500;
     font-size: 14px;
     line-height: 1.2;
@@ -79,37 +131,67 @@ body {
     text-decoration: none;
 }
 
-.auth-nav .link:hover, 
+.auth-nav .link:hover,
 .auth-nav .link:focus {
     color: var(--accent-color);
+}
+
+.page-header {
+    background-color: var(--button-text-color);
 }
 
 /* Hero */
 
 .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    margin-bottom: 94px;
+    text-align: center;
     background-color: var(--bcg-hero-color);
+
 }
 
 .hero-title {
+    margin-top: 0;
+    margin-bottom: 30px;
+
     color: var(--button-text-color);
+
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    text-align: center;
+
     letter-spacing: 0.06em;
     text-transform: uppercase;
 }
 
 /* Button-Hero */
 
-.button {  
+.button {
+    border-radius: 4px;
+    border: transparent;
+    padding: 10px 32px;
+    min-width: 216px;
+
     background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     color: var(--button-text-color);
+
     font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.06em;
+    text-align: center;
+    align-items: center;
+}
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+
+    width: 1200px;
+    outline: 2px solid tomato
 }
 
 /* Button-Portfolio */
@@ -119,23 +201,34 @@ body {
 }
 
 .button.secondary {
+    display: inline-block;
+    border-radius: 4px;
+    border: transparent;
+    padding: 6px 22px;
+    min-width: 73px;
+
     background-color: var(--bcg-button-color);
     color: var(--primary-text-color);
+    box-shadow: none;
+
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.6;
+    text-align: center;
 }
 
 .button .button.secondary:hover,
 .button .button.secondary:focus {
     background-color: var(--accent-color);
     color: var(--button-text-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* Section */
- 
+
 .section .title {
+    margin: 0; 
     color: var(--primary-text-color);
     font-weight: 700;
     font-size: 36px;
@@ -147,9 +240,30 @@ body {
     display: none;
 }
 
+.section h2.title {
+    margin-bottom: 50px;
+}
+
+.section.command h2.title {
+    padding-top: 94px;
+}
+
 /* Features */
+.features {
+    display: flex;
+
+}
+
+.features .item + .item {
+    margin-left: 30px;
+}
+
+ul.features.list {
+    margin-bottom: 94px;
+}
 
 .features .title {
+    margin-bottom: 10px;
     color: var(--primary-text-color);
     font-weight: 700;
     font-size: 14px;
@@ -163,32 +277,60 @@ body {
     line-height: 1.71;
 }
 
+/* Work */
+
+.work {
+    display: flex;
+    justify-content: space-between;
+    max-height: 294px;
+}
+
 /* Command */
 
+.command.list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.command.list .item {
+    background-color: var(--button-text-color);
+}
+
+
 .section.command {
+    margin-top: 94px;
+    padding-bottom: 94px;
     background-color: var(--bcg-button-color);
 }
 
 .command.list .title {
+    margin-top: 30px;
+    margin-bottom: 10px;
     color: var(--primary-text-color);
     font-weight: 500;
     font-size: 16px;
     line-height: 1.2;
+    text-align: center;
 }
 
 .command.list .post {
+    margin-top: 0;
     color: var(--secondary-text-color);
     font-size: 16px;
     line-height: 1.2;
+    text-align: center;
 }
 
 /* Footer */
 
 .footer {
+    padding-top: 60px;
+    padding-bottom: 60px;
     background-color: var(--bcg-hero-color);
 }
 
 .footer .address {
+    margin-top: 20px;
     color: var(--button-text-color);
     font-style: normal;
     font-size: 14px;
@@ -203,6 +345,7 @@ body {
 }
 
 .footer .connect {
+    margin-top: 9px;
     color: var(--tertiary-text-color);
     font-style: normal;
     font-size: 14px;
@@ -225,11 +368,28 @@ body {
     letter-spacing: 0.06em;
 }
 
+.projects h2.title {
+    margin-bottom: 4px;
+}
+
 .projects .text {
     color: var(--secondary-text-color);
     font-size: 16px;
-    line-height: 1.9;    
+    line-height: 1.9;
 }
 
+.section ul.button.list {
+    padding: 0;
+    margin-top: 94px;
+    margin-bottom: 34px;
+    padding-top: 0;
+    padding-bottom: 0;
+}
 
+.projects img {
+    margin-bottom: 20px;
+}
 
+ul.projects.list {
+    margin-bottom: 94px;
+}
