--- a/css/styles.css
+++ b/css/styles.css
@@ -8,416 +8,413 @@
 /* третичный цвет фона footer, фона hero rgba(47, 48, 58, 1) */
 
 :root {
-    --primary-text-color: rgba(33, 33, 33, 1);
-    --secondary-text-color: rgba(117, 117, 117, 1);
-    --tertiary-text-color: rgba(255, 255, 255, 0.6);
-    --accent-color: rgba(33, 150, 243, 1);
-    --logo-first-color: rgba(0, 0, 0, 1);
-    --button-text-color: rgba(255, 255, 255, 1);
-    --bcg-button-color: rgba(245, 244, 250, 1);
-    --bcg-hero-color: rgba(47, 48, 58, 1);
+  --primary-text-color: rgba(33, 33, 33, 1);
+  --secondary-text-color: rgba(117, 117, 117, 1);
+  --tertiary-text-color: rgba(255, 255, 255, 0.6);
+  --accent-color: rgba(33, 150, 243, 1);
+  --logo-first-color: rgba(0, 0, 0, 1);
+  --button-text-color: rgba(255, 255, 255, 1);
+  --bcg-button-color: rgba(245, 244, 250, 1);
+  --bcg-hero-color: rgba(47, 48, 58, 1);
 }
 
 body {
-    background-color: var(--button-text-color);
-    color: var(--primary-text-color);
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    letter-spacing: 0.03em;
+  background-color: var(--button-text-color);
+  color: var(--primary-text-color);
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: 0.03em;
 }
 
 .list {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 /* Site nav */
 .main-nav {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .nav {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .logo {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
-    text-decoration: none;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  text-decoration: none;
 }
 
 .logo-first {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .logo-second {
-    color: var(--logo-first-color);
+  color: var(--logo-first-color);
 }
 
 .logo-third {
-    color: var(--button-text-color);
+  color: var(--button-text-color);
 }
 
 .site-nav {
-    display: flex;
-    margin-left: 93px;
+  display: flex;
+  margin-left: 93px;
 }
 
 .site-nav .item + .item {
-    margin-left: 50px;
+  margin-left: 50px;
 }
 
 .site-nav .link {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
-    color: var(--primary-text-color);
+  color: var(--primary-text-color);
 
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
 
 .site-nav .link:hover,
 .site-nav .link:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .site-nav .link.current {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .auth-nav {
-        display: flex;
-        margin-left: auto;
-    }
+  display: flex;
+  margin-left: auto;
+}
 
 .auth-nav .item + .item {
-    margin-left: 50px;
+  margin-left: 50px;
 }
 
 .auth-nav .link {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
-    color: var(--secondary-text-color);
+  color: var(--secondary-text-color);
 
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
 
 .auth-nav .link:hover,
 .auth-nav .link:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .page-header {
-    background-color: var(--button-text-color);
+  background-color: var(--button-text-color);
 }
 
 /* Hero */
 
 .hero {
-    padding-top: 200px;
-    padding-bottom: 200px;
-    margin-bottom: 94px;
-    text-align: center;
-    background-color: var(--bcg-hero-color);
-
+  padding-top: 200px;
+  padding-bottom: 200px;
+  margin-bottom: 94px;
+  text-align: center;
+  background-color: var(--bcg-hero-color);
 }
 
 .hero-title {
-    margin-top: 0;
-    margin-bottom: 30px;
+  margin-top: 0;
+  margin-bottom: 30px;
 
-    color: var(--button-text-color);
+  color: var(--button-text-color);
 
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
 
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 
 /* Button-Hero */
 
 .button.primary {
-    border-radius: 4px;
-    border: transparent;
-    padding: 10px 32px;
-    min-width: 216px;
+  border-radius: 4px;
+  border: transparent;
+  padding: 10px 32px;
+  min-width: 216px;
 
-    background-color: var(--accent-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    color: var(--button-text-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: var(--button-text-color);
 
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
-    text-align: center;
-    align-items: center;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  text-align: center;
+  align-items: center;
 }
 
 .container {
-    margin-left: auto;
-    margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
 
-    width: 1200px;
-    outline: 2px solid tomato
+  width: 1200px;
+  outline: 2px solid tomato;
 }
 
 /* Button-Portfolio */
 
 .section .button {
-    background-color: var(--button-text-color);
+  background-color: var(--button-text-color);
 }
 
 ul.button.list {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .button.list .item + .item {
-    margin-left: 8px;
+  margin-left: 8px;
 }
 .button.secondary {
-    display: inline-block;
-    border-radius: 4px;
-    border: transparent;
-    padding: 6px 22px;
-    min-width: 73px;
+  display: inline-block;
+  border-radius: 4px;
+  border: transparent;
+  padding: 6px 22px;
+  min-width: 73px;
 
-    background-color: var(--bcg-button-color);
-    color: var(--primary-text-color);
-    box-shadow: none;
+  background-color: var(--bcg-button-color);
+  color: var(--primary-text-color);
+  box-shadow: none;
 
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.6;
-    text-align: center;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: center;
 }
 
 .button .button.secondary:hover,
 .button .button.secondary:focus {
-    background-color: var(--accent-color);
-    color: var(--button-text-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  background-color: var(--accent-color);
+  color: var(--button-text-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* Section */
 
 .section .title {
-    margin: 0; 
-    color: var(--primary-text-color);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.2;
-    text-align: center;
+  margin: 0;
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  text-align: center;
 }
 
 .section .title-none {
-    display: none;
+  display: none;
 }
 
 .section h2.title {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .section.command h2.title {
-    padding-top: 94px;
+  padding-top: 94px;
 }
 
 /* Features */
 .features {
-    display: flex;
-
+  display: flex;
 }
 
 .features .item + .item {
-    margin-left: 30px;
+  margin-left: 30px;
 }
 
 ul.features.list {
-    margin-bottom: 94px;
+  margin-bottom: 94px;
 }
 
 .features .title {
-    margin-bottom: 10px;
-    color: var(--primary-text-color);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.2;
-    text-transform: uppercase;
+  margin-bottom: 10px;
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.2;
+  text-transform: uppercase;
 }
 
 .features .text {
-    color: var(--secondary-text-color);
-    font-size: 14px;
-    line-height: 1.71;
+  color: var(--secondary-text-color);
+  font-size: 14px;
+  line-height: 1.71;
 }
 
 /* Work */
 
 .work {
-    display: flex;
-    justify-content: space-between;
-    max-height: 294px;
+  display: flex;
+  justify-content: space-between;
+  max-height: 294px;
 }
 
 /* Command */
 
-
 .command.list {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
-
 
 .command.list .item {
-    background-color: var(--button-text-color);
+  background-color: var(--button-text-color);
 }
 
-
 .section.command {
-    margin-top: 94px;
-    padding-bottom: 94px;
-    background-color: var(--bcg-button-color);
+  margin-top: 94px;
+  padding-bottom: 94px;
+  background-color: var(--bcg-button-color);
 }
 
 .command.list .title {
-    margin-top: 30px;
-    margin-bottom: 10px;
-    color: var(--primary-text-color);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.2;
-    text-align: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
 }
 
 .command.list .post {
-    margin-top: 0;
-    color: var(--secondary-text-color);
-    font-size: 16px;
-    line-height: 1.2;
-    text-align: center;
+  margin-top: 0;
+  color: var(--secondary-text-color);
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
 }
 
 /* Footer */
 
 .footer {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    background-color: var(--bcg-hero-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: var(--bcg-hero-color);
 }
 
 .footer .address {
-    margin-top: 20px;
-    color: var(--button-text-color);
-    font-style: normal;
-    font-size: 14px;
-    line-height: 1.7;
-    text-decoration: none;
-
+  margin-top: 20px;
+  color: var(--button-text-color);
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  text-decoration: none;
 }
 
 .footer .address:hover,
 .footer .address:hover {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .footer .connect {
-    margin-top: 9px;
-    color: var(--tertiary-text-color);
-    font-style: normal;
-    font-size: 14px;
-    line-height: 1.7;
-    text-decoration: none;
+  margin-top: 9px;
+  color: var(--tertiary-text-color);
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  text-decoration: none;
 }
 
 .footer .connect:hover,
 .footer .connect:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 /* Portfolio */
 
 .projects .title {
-    color: var(--primary-text-color);
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    text-align: left;
-    
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  text-align: left;
 }
 
 .projects h2.title {
-    margin-bottom: 4px;
+  margin-bottom: 4px;
 }
 
 .projects .text {
-    margin-top: 0;
-    margin-bottom: 0;
-    color: var(--secondary-text-color);
-    font-size: 16px;
-    line-height: 1.9;
-    text-align: left;
+  margin-top: 0;
+  margin-bottom: 0;
+  color: var(--secondary-text-color);
+  font-size: 16px;
+  line-height: 1.9;
+  text-align: left;
 }
 
 .section ul.button.list {
-    padding: 0;
-    margin-top: 94px;
-    margin-bottom: 34px;
-    padding-top: 0;
-    padding-bottom: 0;
+  padding: 0;
+  margin-top: 94px;
+  margin-bottom: 34px;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .projects img {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .container .projects.list {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-
 ul.projects.list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 94px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 94px;
 }
 
 .projects.item {
-    width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px;
+  width: calc(100% - 60px)/3;
+  margin-right: 30px;
+  margin-bottom: 30px;
 }
 
 .projects.item:nth-child(3n) {
-    margin-right: 0; 
+  margin-right: 0;
+}
+
+.projects.item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
