--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@
 /* цвет основного фона, color hero, color Button rgba(255, 255, 255, 1) */
 /* вторичный цвет фона, bcg Button secondary rgba(245, 244, 250, 1) */
 /* третичный цвет фона footer, фона hero rgba(47, 48, 58, 1) */
+/* color-border-projects: rgba(238, 238, 238, 1) */
+/* color-border-header: rgba(236, 236, 236, 1) */
 
 :root {
   --primary-text-color: rgba(33, 33, 33, 1);
@@ -16,6 +18,8 @@
   --button-text-color: rgba(255, 255, 255, 1);
   --bcg-button-color: rgba(245, 244, 250, 1);
   --bcg-hero-color: rgba(47, 48, 58, 1);
+  --color-border-projects: rgba(238, 238, 238, 1);
+  --color-border-header: rgba(236, 236, 236, 1);
 }
 
 body {
@@ -37,6 +41,9 @@ body {
 .main-nav {
   display: flex;
   align-items: center;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: var(--color-border-header);
 }
 
 .nav {
@@ -46,8 +53,8 @@ body {
 
 .logo {
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 24px;
+  padding-bottom: 25px;
 
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -65,7 +72,7 @@ body {
 }
 
 .logo-third {
-  color: var(--button-text-color);
+  color: var(--button-text-color);  
 }
 
 .site-nav {
@@ -137,7 +144,6 @@ body {
 .hero {
   padding-top: 200px;
   padding-bottom: 200px;
-  margin-bottom: 94px;
   text-align: center;
   background-color: var(--bcg-hero-color);
 }
@@ -178,11 +184,11 @@ body {
 }
 
 .container {
+  width: 1200px;
   margin-left: auto;
   margin-right: auto;
-
-  width: 1200px;
-  outline: 2px solid tomato;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 /* Button-Portfolio */
@@ -244,8 +250,9 @@ ul.button.list {
   margin-bottom: 50px;
 }
 
-.section.command h2.title {
+.section.command {
   padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 /* Features */
@@ -259,6 +266,7 @@ ul.button.list {
 
 ul.features.list {
   margin-bottom: 94px;
+  padding-top: 94px;
 }
 
 .features .title {
@@ -268,6 +276,7 @@ ul.features.list {
   font-size: 14px;
   line-height: 1.2;
   text-transform: uppercase;
+  text-align: left;
 }
 
 .features .text {
@@ -302,7 +311,6 @@ ul.features.list {
 }
 
 .command.list .title {
-  margin-top: 30px;
   margin-bottom: 10px;
   color: var(--primary-text-color);
   font-weight: 500;
@@ -313,11 +321,18 @@ ul.features.list {
 
 .command.list .post {
   margin-top: 0;
+  margin-bottom: 0;
   color: var(--secondary-text-color);
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
 }
+
+.command-name {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
 
 /* Footer */
 
@@ -328,7 +343,6 @@ ul.features.list {
 }
 
 .footer .address {
-  margin-top: 20px;
   color: var(--button-text-color);
   font-style: normal;
   font-size: 14px;
@@ -342,7 +356,6 @@ ul.features.list {
 }
 
 .footer .connect {
-  margin-top: 9px;
   color: var(--tertiary-text-color);
   font-style: normal;
   font-size: 14px;
@@ -353,6 +366,16 @@ ul.features.list {
 .footer .connect:hover,
 .footer .connect:focus {
   color: var(--accent-color);
+}
+
+.footer .logo {
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+}
+
+.contacts .item {
+  margin-top: 9px;
 }
 
 /* Portfolio */
@@ -381,32 +404,23 @@ ul.features.list {
 
 .section ul.button.list {
   padding: 0;
-  margin-top: 94px;
   margin-bottom: 34px;
   padding-top: 0;
   padding-bottom: 0;
 }
 
-.projects img {
-  margin-bottom: 20px;
-}
-
-.container .projects.list {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+.container .portfolio-collection {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 ul.projects.list {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 94px;
 }
 
 .projects.item {
-  width: calc(100% - 60px)/3;
+  width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
 }
@@ -417,4 +431,12 @@ ul.projects.list {
 
 .projects.item:nth-last-child(-n + 3) {
   margin-bottom: 0;
+}
+
+.collection-name {
+  padding: 20px 24px;
+  
+  border-width: 1px;
+  border-style: solid;
+  border-color: var(--color-border-projects);
 }
