--- a/css/styles.css
+++ b/css/styles.css
@@ -37,10 +37,14 @@ body {
   list-style: none;
 }
 
+
 /* Site nav */
 .main-nav {
   display: flex;
   align-items: center;
+}
+
+.section.site-nav {
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: var(--color-border-header);
@@ -138,6 +142,7 @@ body {
 .page-header {
   background-color: var(--button-text-color);
 }
+
 
 /* Hero */
 
@@ -250,11 +255,6 @@ ul.button.list {
   margin-bottom: 50px;
 }
 
-.section.command {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 /* Features */
 .features {
   display: flex;
@@ -264,9 +264,10 @@ ul.button.list {
   margin-left: 30px;
 }
 
-ul.features.list {
-  margin-bottom: 94px;
+.section.features {
+  padding-bottom: 94px;
   padding-top: 94px;
+
 }
 
 .features .title {
@@ -287,6 +288,10 @@ ul.features.list {
 
 /* Work */
 
+.section.works {
+  padding-bottom: 94px;
+}
+
 .work {
   display: flex;
   justify-content: space-between;
@@ -305,7 +310,7 @@ ul.features.list {
 }
 
 .section.command {
-  margin-top: 94px;
+  padding-top: 94px;
   padding-bottom: 94px;
   background-color: var(--bcg-button-color);
 }
@@ -404,14 +409,9 @@ ul.features.list {
 
 .section ul.button.list {
   padding: 0;
-  margin-bottom: 34px;
+  margin-bottom: 50px;
   padding-top: 0;
   padding-bottom: 0;
-}
-
-.container .portfolio-collection {
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 
 ul.projects.list {
@@ -420,6 +420,7 @@ ul.projects.list {
 }
 
 .projects.item {
+  display: block;
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
@@ -431,6 +432,11 @@ ul.projects.list {
 
 .projects.item:nth-last-child(-n + 3) {
   margin-bottom: 0;
+}
+
+.section.portfolio-collection {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .collection-name {
